# pq-sap

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
cache/: solidity-files-cache.json
docs/: README.md
src/: lib.rs
src/benchmarks/: benchmark1.rs  hybrid_sap_benchmark.rs  pq_sap_benchmark.rs  pq_sap_whole_hash_shuffling_benchmark.rs  sender_side_benchmark.rs  viewtags_comparison_benchmark.rs
src/crypto/: consts.rs  kem.rs
src/on_chain/: utils.rs
src/on_chain/cli/: main.rs
src/on_chain/data/: meta_data.json
src/on_chain/rest/controller/: blockchain_controller.rs
src/on_chain/rest/model/: meta_data.rs
src/on_chain/rest/repository/: meta_data_repository.rs
src/on_chain/rest/server/: main.rs
src/on_chain/rest/service/: blockchain_service.rs
src/on_chain/smart-contracts/: PQSAP_Announcer.sol
src/recipient/: recipient.rs
src/scripts/: generate_keys.rs
src/sender/: sender.rs
src/tests/: kem_tests.rs  protocol_tests.rs  wrapper_tests.rs
src/utils/: consts.rs
src/versions/: v0.rs  v1.rs  v2.rs
src/wrapper/: consts.rs  newhope.rs  poly.rs
src/wrapper/frodo/: consts.rs  frodo.rs
src/wrapper/newhope/: consts.rs  newhope.rs  poly.rs
