[package]
name = "pq-sap"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"]}
pqc_kyber = {git = "https://github.com/0x3327/kyber", branch = "master"}
hex = "0.4.3"
sha2 = "0.10.8"
libc = "0.2.168"

[build-dependencies]
cc = "1.2.4"

[features]
newhope512 = [] 
newhope1024 = [] 
kyber512 = ["pqc_kyber/kyber512"] 
kyber768 = ["pqc_kyber/kyber768"] 
kyber1024 = ["pqc_kyber/kyber1024"] 

[[test]]
name = "protocol_tests" 
path = "src/tests/protocol_tests.rs"

[[test]]
name = "kem_tests" 
path = "src/tests/kem_tests.rs"

[[bin]]
name = "benchmark1" 
path = "src/benchmarks/benchmark1.rs"

