[package]
name = "pq-sap"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"]}
pqc_kyber = {git = "https://github.com/0x3327/kyber", branch = "master"}
hex = "0.4.3"
sha2 = "0.10.8"
libc = "0.2.168"
secp256k1 = {version = "0.30.0", features = ["rand", "std"]}
crypto-bigint = "0.6.0"
colored = "3.0.0"
tokio = {version = "1.43.0", features = ["full"]}
ethers = "2.0.14"
sha3 = "0.10.8"
clap = "4.5.31"
dialoguer = "0.11.0"
actix = "0.13.5"
actix-web = "4.9.0"
sqlx = {version = "0.8.3", features=["mysql", "runtime-tokio", "tls-native-tls"]}
dotenv = "0.15.0"

[build-dependencies]
cc = "1.2.4"

[features]
default = []
newhope512 = [] 
newhope1024 = [] 
kyber512 = ["pqc_kyber/kyber512"] 
kyber768 = ["pqc_kyber/kyber768"] 
kyber1024 = ["pqc_kyber/kyber1024"] 
frodo640 = []
frodo976 = [] 
frodo1344 = [] 

[[test]]
name = "protocol_tests" 
path = "src/tests/protocol_tests.rs"

[[test]]
name = "kem_tests" 
path = "src/tests/kem_tests.rs"

[[bin]]
name = "pq_sap_benchmark" 
path = "src/benchmarks/pq_sap_benchmark.rs"

[[bin]]
name = "pq_sap_whole_hash_shuffling_benchmark" 
path = "src/benchmarks/pq_sap_whole_hash_shuffling_benchmark.rs"

[[bin]]
name = "viewtags_comparison_benchmark"
path = "src/benchmarks/viewtags_comparison_benchmark.rs"

[[bin]]
name = "hybrid_sap_benchmark"
path = "src/benchmarks/hybrid_sap_benchmark.rs"

[[bin]]
name = "cli"
path = "src/on_chain/cli/main.rs"

[[bin]]
name = "keygen"
path = "src/scripts/generate_keys.rs"


[[bin]]
name = "server"
path = "src/on_chain/rest/server/main.rs"
